# A-Less-Writey-Paxos

./: CMakeLists.txt  paxos.conf  paxos_acceptor.conf
CThreadPool/: CMakeLists.txt
TLA Specs/ExtendedAlgorithm/: Consensus.tla  ExtendedAlgorithm.cfg  LessWriteyPaxos.tla  Untitled.tla
TLA Specs/ExtendedAlgorithm/ExtendedAlgorithm.toolbox/: .project  ExtendedAlgorithm.tex
TLA Specs/ExtendedAlgorithm/lesswriteypaxos.toolbox/: .project
TLA Specs/ExtendedAlgorithm/untitled folder/: ExtendedAlgorithm.tla
TLA Specs/LessWriteyAlgorithm/: Consensus.tla  LessWriteyAlgorithm.cfg  LessWriteyAlgorithm.tla
cmake/: FindLIBEVENT.cmake  FindLIBEVENT_THREADS.cmake  FindLMDB.cmake
evpaxos/: CMakeLists.txt  backoff.c  backoff_manager.c  config.c  epoch_paxos_message.c  ev_epoch_acceptor.c  ev_epoch_learner.c  ev_epoch_proposer.c  ev_epoch_proposer.cpp  ev_optimised_less_writey_ballot_acceptor.c  ev_standard_acceptor.c  ev_timer_threshold_timer_util.c  ev_write_ahead_ballot_acceptor.c  ev_write_ahead_window_acceptor.c  evlearner.c  evproposer.c  evreplica.c  instance_strategy.c  message.c  paxos_types_pack.c  peers.c  round_robin_allocator.c  round_robin_allocator.h  settler_iner.c  standard_paxos_message.c  standard_paxos_peers.c  writeahead_epoch_paxos_peers.c
evpaxos/include/: backoff.h  backoff_implementations.h  backoff_manager.h  epoch_paxos_message.h  ev_epoch_paxos.h  ev_epoch_paxos_internal.h  ev_timer_threshold_timer_util.h  evpaxos_internal.h  instance_strategy.h  message.h  paxos_types_pack.h  peers.h  settler_iner.h  standard_paxos_peers.h  writeahead_epoch_paxos_peers.h
evpaxos/include/evpaxos/: config.h  epoch_paxos.h  paxos.h
paxos/: CMakeLists.txt  array_list.c  ballot.c  ballot_giver.c  carray.c  client_value_queue.c  count_logger.c  epoch_acceptor.c  epoch_ballot.c  epoch_learner.c  epoch_paxos_storage.c  epoch_proposer.c  epoch_stable_storage.c  hash_mapped_memory.c  learner.c  message_and_response_counters.c  optimised_less_writey_ballot_acceptor.c  optimised_less_writey_ballot_stable_storage.c  paxos.c  paxos_message_conversion.c  paxos_storage.c  paxos_value.c  pending_client_values.c  performance_threshold_timer.c  proposer_common.c  quorum.c  random.c  stable_storage_but_not_really.c  stable_storage_lmdb.c  standard_acceptor.c  standard_proposer.c  standard_stable_storage.c  storage_utils.c  value_proposal_manager.c  write_ahead_window_acceptor.c  writeahead_ballot_acceptor.c  writeahead_epoch_acceptor.c  writeahead_window_acceptor.c
paxos/include/: InstanceValuesManager.h  array_list.h  ballot.h  ballot_giver.h  carray.h  client_value_queue.h  count_logger.h  epoch_acceptor.h  epoch_ballot.h  epoch_learner.h  epoch_paxos_storage.h  epoch_proposer.h  epoch_quorum.h  epoch_stable_storage.h  instance.h  khash.h  learner.h  optimised_less_writey_ballot_acceptor.h  optimsed_less_writey_ballot_stable_storage.h  paxos.h  paxos_message_conversion.h  paxos_storage.h  paxos_types.h  paxos_value.h  pending_client_values.h  performance_threshold_timer.h  proposer.h  proposer_common.h  proposer_message_and_response_counters.h  quorum.h  random.h  standard_acceptor.h  standard_stable_storage.h  storage_utils.h  timeout.h  value_proposal_manager.h  write_ahead_window_acceptor.h  writeahead_ballot_acceptor.h  writeahead_epoch_acceptor.h
sample/: CMakeLists.txt  client.c  client_benchmarker.c  client_value.c  counter.c  epoch_acceptor.c  epoch_client.c  epoch_proposer.c  fake_leader.c  latency_recorder.c  learner.c  optimised_less_writey_ballot_acceptor.c  proposer.c  replica.c  standard_acceptor.c  test.c
sample/include/: client_benchmarker.h  client_value.h  latency_recorder.h
utils/genpack/: paxos_genpack.rb
utils/genpack/lib/genpack/: generator.rb
